--- a/index.html
+++ b/index.html
@@ -1,4 +1,61 @@
 <!DOCTYPE html>
-<html>
-<body><h1>RaGaB Website Under Construction</h1></body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ahmed RaGab | Engineering & Beyond</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body { background-color: #f4f7f6; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .bento-card { background: white; border-radius: 15px; padding: 25px; height: 100%; border: 1px solid #e0e0e0; }
+        .hero-text { padding: 60px 0; text-align: center; }
+        .category-label { font-size: 0.8rem; text-transform: uppercase; color: #007bff; font-weight: bold; }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <header class="hero-text">
+        <h1 class="display-4 fw-bold">Ahmed Ragab</h1>
+        <p class="lead"> ADAS/AD Engineering Manager | Fitness & Nutrition Coach | Finance & Real Estate Enthusiast</p>
+    </header>
+
+    <div class="row g-4">
+        <div class="col-md-8">
+            <div class="bento-card">
+                <span class="category-label">The Professional Journey</span>
+                <h3 class="mt-2">Embedded Automotive Specialist</h3>
+                <p>experiencing ADAS in commercial vehicles since 2010. From MATLAB/Simulink models to ASPICE-compliant production software.</p>
+                <hr>
+                <p><em>Ask me about: ASPICE, Rapid Prototyping, and High-Efficiency global cross-functional leadership.</em></p>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="bento-card">
+                <span class="category-label">Fitness & Nutrition</span>
+                <h3>Coaching</h3>
+                <p>Helping others bridge the gap between sedentary office life and peak physical health.</p>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="bento-card">
+                <span class="category-label">Finance</span>
+                <h3>Passed CFA L1 Exam on 1st attempt/Real Estate Investor</h3>
+                <p>Navigating the German real estate market with an engineering mindset.</p>
+            </div>
+        </div>
+
+        <div class="col-md-8">
+            <div class="bento-card">
+                <span class="category-label">My Story</span>
+                <h3>Egyptian Roots, German Citizenship</h3>
+                <p>A journey from the streets of Cairo to the innovation hubs of Hannover. Fluent in Arabic, English, and German.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
 </html>
