--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p class="lead mb-4" style="color: #94a3b8;">For 15+ years, I have navigated the high-stakes V-Model of ADAS and Embedded Software.</p>
                     <hr style="border-color: #334155;">
                     <h4>Technical Pillar: The Scaler</h4>
-                    <p>Leading 70+ engineers and 4 SOPs. I build scalable ecosystems, moving from ASPICE Level 2 to standardized Rapid Prototyping via MicroAutoBox. I bridge the gap between "it works on my desk" and "it’s safe on the road."</p>
+                    <p>Leading 70+ engineers and 4 SOPs. I build scalable ecosystems, from ensuring ASPICE compliancy to standardizing Rapid Prototyping and using AI in the development processes. I bridge the gap between "it works on my desk" and "it’s safe on the road."</p>
                 </div>
             </div>
 
