--- a/index.html
+++ b/index.html
@@ -81,45 +81,16 @@
                     <p><strong>Anticipation Glasses:</strong> Passing the CFA Level 1 on the first attempt allowed me to apply the "Investment Triangle" (Time, Risk, Reward) to both German Real Estate and technical systems.</p>
                 </div>
             </div>
-
         </div>
-    </div>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-12">
-                <h3 style="color: var(--navy-blue); font-weight: 800; border-bottom: 2px solid var(--forest-green); padding-bottom: 10px; margin-bottom: 30px;">
-                    Updates & Insights
-                </h3>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-md-8">
-                <div class="card-box mb-4">
-                    <span class="badge bg-success mb-2" style="background-color: var(--forest-green) !important;">Latest Thought</span>
-                    <h5 class="fw-bold">The Convergence of AI and ASPICE</h5>
-                    <p class="text-muted" style="font-size: 0.85rem;">January 2026</p>
-                    <p class="mt-2">Implementing AI in the development cycle isn't just about speed; it's about maintaining the rigor of the V-Model while handling the non-deterministic nature of modern ADAS algorithms...</p>
-                </div>
-                
-                <div class="card-box mb-4">
-                    <h5 class="fw-bold">Reflections on the Investment Triangle</h5>
-                    <p class="text-muted" style="font-size: 0.85rem;">December 2025</p>
-                    <p class="mt-2">Managing a team of 70+ engineers is not unlike managing a real estate portfolio. You must account for depreciation (technical debt) and market volatility (project shifts)...</p>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card-box text-center" style="border-top: 4px solid var(--navy-blue);">
-                    <i class="fab fa-linkedin fa-3x mb-3" style="color: var(--navy-blue);"></i>
-                    <h5>LinkedIn Activity</h5>
-                    <p class="small mb-4">I share technical insights on ADAS R&D and leadership weekly.</p>
-                    <a href="https://www.linkedin.com/in/a-rgb/recent-activity/all/" target="_blank" class="btn btn-outline-primary w-100" style="border-color: var(--navy-blue); color: var(--navy-blue);">
-                        View Recent Posts
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
+    <nav class="navbar navbar-expand-lg fixed-top bg-white shadow-sm">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html" style="color: var(--navy-blue);">RAGAB</a>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link active fw-bold" href="updates.html">Updates</a>
+                <a class="nav-link text-muted" href="#">The Game (Soon)</a>
+            </div>
+        </div>
+    </nav>
 </html>
