--- a/updates.html
+++ b/updates.html
@@ -19,8 +19,8 @@
             <a class="navbar-brand fw-bold" href="index.html" style="color: var(--navy-blue);">RAGAB</a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="index.html">Home</a>
-                <a class="nav-link active fw-bold" href="updates.html">Updates</a>
-                <a class="nav-link text-muted" href="#">The Game (Soon)</a>
+                <a class="nav-link" href="updates.html">Updates</a>
+                <a class="nav-link active fw-bold" href="value.html">The Lab</a>
             </div>
         </div>
     </nav>
