Correct the CV file name

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link active px-3" href="index.html">Home</a>
                 <a class="nav-link px-3" href="updates.html">Updates</a>
                 <a class="nav-link px-3" href="value.html">The Lab</a>
-                <a class="btn btn-sm btn-primary ms-lg-3" href="Ahmed_Ragab_CV.pdf" target="_blank" style="background-color: var(--navy-blue);">
+                <a class="btn btn-sm btn-primary ms-lg-3" href="AhmedRagabCV.pdf" target="_blank" style="background-color: var(--navy-blue);">
                     <i class="fa-solid fa-file-pdf me-2"></i>Download CV
                 </a>
             </div>
