--- a/index.html
+++ b/index.html
@@ -143,6 +143,40 @@
         </div>
     </div>
 
+    <div class="card-box" data-bs-toggle="modal" data-bs-target="#coachingModal" style="cursor: pointer;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: var(--forest-green); color: white;">
+                <h5 class="modal-title">The Handball Rule: Leadership in Action</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body p-4">
+                <h6>30 Years on the Court</h6>
+                <p>In Handball, individual brilliance never beats a synchronized defense. I apply this to engineering: No "Hero Developers." We succeed as a unit where the interface between members is as optimized as the software code itself.</p>
+                <h6 class="mt-4">The Performance Coach Mindset</h6>
+                <p>Managing 70+ engineers requires the same principles as fitness coaching: <strong>Clear KPIs, sustainable intensity, and recovery.</strong> I ensure my teams are not just "working," but performing at their peak cognitive capacity without burnout.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <div class="card-box" data-bs-toggle="modal" data-bs-target="#investmentModal" style="cursor: pointer;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: var(--slate-grey); color: white;">
+                <h5 class="modal-title">The Investment Triangle</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body p-4">
+                <h6>CFA Level 1 & Analytical Rigor</h6>
+                <p>Passing the CFA Level 1 on the first attempt wasn't just about finance; it was about mastering the <strong>Investment Triangle: Risk, Time, and Reward.</strong> I use this framework to evaluate technical debt and R&D roadmaps.</p>
+                <h6 class="mt-4">Real Estate & Technical Stability</h6>
+                <p>Investing in German real estate taught me to look for "Structural Integrity." In ADAS, I look for the same—building software foundations that don't crumble when the market or the technology shifts.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
